[package]
name = "file-downloader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.2.1"
actix-web-lab = "0.19.0"
anyhow = "1.0.34"
csv = "1.2.2"
dotenv = "0.15.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_derive = "1.0"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }

[dependencies.sqlx] 
version = "0.6.2" 
default-features = false 
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]